controller/service: delete
